feat: update json agg postgre coa :zap:
